<resources>
    <string name="app_name">FinalGroup3</string>
    <string name="welcome">Weclcome to AlohaChat!!!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="signin">Login to your Account</string>
    <string name="hint_email">Email</string>
    <string name="hint_user">Username</string>
    <string name="hint_pass">Password</string>
    <string name="btn_reg">Create</string>
    <string name="create">Create an Account</string>
    <string name="logout">Log Out</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">status</string>
    <string name="username">name</string>
    <string name="myprofile">My profile</string>
    <string name="forgot">Forgot your password?</string>
    <string name="todo">TODO</string>
    <string name="send">Send Message</string>
    <string name="setting">settings</string>
    <string name="sendMess">Type a message…</string>
    <string name="myname">Enter your display name</string>
    <string name="myStatus">What\'s on your mind?</string>
    <string name="upInfor">Update Info</string>
</resources>
